fix various introduced spacing issues

--- a/css/main.scss
+++ b/css/main.scss
@@ -10,13 +10,6 @@ html, body, main {
     min-height: 100%;
     background-color: #12181D;
 }
-.menu-link {
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    height: 30px;
-    z-index: 99;
-}
 a:not(.MuiButtonBase-root), .link {
     cursor: pointer;
     color: $link;
